# SupersonicNozzleCalculations

./: .gitignore  README.md  cfd_integration.py  exit_temperature.py  exit_velocity.py  film_cooling.py  gui.py  inlet_temperature.py  main.py  nozzle_geometry.py  pressure_ratio.py  pyproject.toml  requirements.txt  thrust.py  visualization.py
.github/workflows/: ci.yml
docs/: README.md  api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  usage.rst
docs/theory/: gas_dynamics.md
docs/tutorials/: basic_analysis.md
docs/validation/: analytical.md  cfd.md  film_cooling.md
examples/: visualization_example.py
examples/cantera/: nozzle.yaml
examples/gmsh/: nozzle.geo
examples/openfoam/system/: controlDict
tests/: test_advanced_geometries.py  test_cfd_integration.py  test_chemical_reactions.py  test_film_cooling.py  test_flow_calculations.py  test_gui.py  test_main.py  test_main_workflow.py  test_nozzle_geometry.py  test_visualization.py  test_visualization_integration.py
